<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp">

    <!-- Chronometer -->
    <Chronometer
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clock"
        android:textSize="60sp"
        android:layout_gravity="center" />

    <!-- Startボタン -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStart"
        android:text="@string/start"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <!-- Stopボタン -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStop"
        android:text="@string/stop"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <!-- シェアボタン（初期状態で非表示） -->
    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_button"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</LinearLayout>
